--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,24 @@
 = terrapin
 
-Description goes here.
+* Yet another mass spec viewer.
+* Uses Rubygame and FFI-OpenGL for simple scripting and FFI-Inliner for blazing fast speed.
+* Meant to run any mzXML/mzML and mzIdentML.
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+== Example
+
+    % terrapin
+
+== Installation
+
+Once I release it to rubygems
+
+    gem install terrapin
+
+Right now
+
+    download/clone from github
+    rake build
+    gem install pkg/*.gem
 
 == Copyright
 
